hangman/styles.css
@font-face {
  font-family: "Geo-Regular";
  src: url("assets/fonts/Geo-Regular.ttf") format("truetype");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

:root {
  --color-primary: #664d37;
  --color-secondary: #fafad2;
  --color-white: #fff;
  --color-black: #000;
  --color-dark-gray: #3a3a3a;
  --color-light-gray: #f4f4f4;
  --shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  --border-radius: 5px;
}

body {
  font-family: "Nova Square", sans-serif;
  font-size: 1.5rem;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--color-dark-gray);
  background: var(--color-primary);
}

/* To darken the background image */
body::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: linear-gradient(
    rgba(0, 0, 0, 0.6),
    rgba(0, 0, 0, 0.4)
  ),
  url("assets/images/rope-bg.jpg") no-repeat center center fixed;
  background-size: cover;
  z-index: -1;
}

/* Game container */

#hangman-container {
  margin: auto;
  max-width: 700px;
  text-align: center;
  padding: 1rem 2rem 3.25rem;
  border-radius: var(--border-radius);
  background: var(--color-light-gray);
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
}

h1 {
  font-family: "Geo-Regular", sans-serif;
  font-size: 5.8rem;
  letter-spacing: 0.2rem;
  color: var(--color-primary);
  text-align: center;
  text-shadow: var(--shadow);
  margin-bottom: 1rem;
}

#gallows-canvas {
  display: block;
  margin: 1.5rem auto;
  background: var(--color-white);
  border-radius: var(--border-radius);
  box-shadow: 0 2px 8px var(--color-primary);
}

#quiz-section {
  padding: 1rem;
  margin-bottom: 1rem;
}

#secret-word {
  font-family: "Geo-Regular", sans-serif;
  font-size: 3rem;
  text-transform: uppercase;
  letter-spacing: 0.6rem;
  text-align: center;
  margin-bottom: 1rem;
  color: var(--color-primary);
}

#virtual-keyboard {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  justify-content: center;
  width: 85%;
  margin: auto;
}

.key {
  flex: 0 0 calc(100% / 9 - 5px); /* Each key takes up 1/9th of the row minus the gap */
  font-size: 1.4rem;
  text-align: center;
  background: var(--color-primary);
  color: var(--color-secondary);
  padding: 0.5rem;
  border: 1px solid var(--color-black);
  border-radius: var(--border-radius);
  box-shadow: var(--shadow);
  cursor: pointer;
  transition: all 0.3s ease;
}

.key:hover {
  transform: scale(1.1);
  background: var(--color-secondary);
  color: var(--color-primary);
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
}

.key:active {
  background: #ccc;
  color: #666;
  cursor: not-allowed;
}

.key:focus {
  outline: 3px solid var(--color-secondary);
  outline-offset: 2px;
  background: var(--color-secondary);
  color: var(--color-primary);
}

/* Modal Window */

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.8);
  padding: 1.5rem 1rem 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  cursor: pointer;
}

.modal-content {
  max-width: 340px;
  min-height: 62%;
  background: linear-gradient(180deg, #fcec4b, var(--color-secondary));
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  padding: 4rem 1rem 3rem;
  font-size: 1.1rem;
  border-radius: 10px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  position: relative;
  cursor: default;
}

.modal-content .trophy {
  width: 100px;
  height: auto;
  margin: 1rem 0;
}

.modal-content p {
  font-size: 1.3rem;
  margin-bottom: 1rem;
}

.modal-content p strong {
  font-family: "Geo-Regular", sans-serif;
  font-size: 2.5rem;
  color: var(--color-primary);
}

.modal-content button {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
  background: var(--color-primary);
  color: var(--color-secondary);
  padding: 1rem 2rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.2s ease;
}

.modal-content button:hover {
  color: #fcec4b;
  background: #b35c2b;
  transform: scale(1.05);
}

.modal-content .close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  width: 40px;
  height: 40px;
  padding: 0.5rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#play-again-btn {
  margin-top: 1rem;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}

/* Media queries */
@media (max-width: 768px) {
  h1 {
    font-size: 5rem;
  }
  #secret-word {
    font-size: 3rem;
    letter-spacing: 0.3rem;
  }
  .modal-content {
    min-height: 75%;
  }
  #play-again-btn {
    font-size: 1rem;
  }
}

@media (max-width: 600px) {
  h1 {
    font-size: 4.2rem;
    line-height: 1.2;
  }
  #virtual-keyboard {
    width: 95%;
  }
  .key {
    font-size: 1.3rem;
    padding: 0.4rem 0.7rem;
  }
  .modal-content {
    width: 100%;
  }
}

@media (max-width: 480px) {
  h1 {
    font-size: 3.5rem;
    line-height: 1;
  }
  #gallows-canvas {
    width: 160px;
    height: 240px;
  }
  #quiz-section {
    font-size: 1.3rem;
    padding: 0.5rem;
  }
  #secret-word {
    font-size: 2.5rem;
    letter-spacing: 0.3rem;
    margin-bottom: 1rem;
  }
  #virtual-keyboard {
    width: 100%;
    gap: 4px;
  }
}

@media (max-width: 360px) {
  #quiz-section {
    font-size: 1.2rem;
  }
  #secret-word {
    font-size: 2rem;
    letter-spacing: 0.2rem;
  }
}

